# C-Star

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Externals.cfg  LICENSE  MANIFEST.in  README  README.md  as.py  blueprint_pio.yaml  codecov.yml  conftest.py  coverage.toml  cstar_blueprint_roms_marbl_example.yaml  manage_externals  pyproject.toml  roms_marbl_example.py  setup.py  source_2026.1.yaml
.github/: PULL_RELEASE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: close_jira_ticket.yaml  create_jira_ticket.sh  create_jira_tickets.sh  integration_tests.yaml  jira.yaml  open_jira_ticket.yaml  pre-commit.yaml  pypipublish.yaml  sphinx.yaml  tests.yaml  tests_old.yaml  unit_tests.yaml  update_release_notes.yaml
ci/: environment.yml  environment_hpc.yml  update_release_notes.py
ci/containers/: Makefile  README.md  build  build.sh
ci/docker/: Makefile  build.sh  entrypoint.sh
conda_recipe/: build.sh  meta.yaml
cstar/: .pre-commit-config.yaml  __init__.py  additional_code.py  base_model.py  case.py  component.py  cstar_case.py  input_dataset.py  simulation.py  utils.py
cstar/applications/: __init__.py  core.py  hello_world.py  hello_world_app.py  nest_ic_app.py  plotter.py  plotter_app.py  roms_marbl.py  upscaler_app.py  utils.py
cstar/base/: __init__.py  adapter.py  additional_code.py  base_model.py  basemodel.py  component.py  context.py  contracts.py  datasource.py  discretization.py  env.py  environment.py  exceptions.py  external_codebase.py  feature.py  gitutils.py  hpc_env_var_map.py  input_dataset.py  local_file_stats.py  log.py  runtime_env_config.py  scheduler.py  scheduler_job.py  system.py  utils.py
cstar/cli/: cli.py  common.py  core.py  version.py
cstar/entrypoint/: __init__.py  analysis.py  config.py  runner.py  service.py  utils.py  xrunner.py
cstar/execution/: file_system.py  handler.py  local_process.py  scheduler_job.py
cstar/io/: __init__.py  constants.py  retriever.py  source_data.py  staged_data.py  stager.py
cstar/marbl/: __init__.py  base_model.py  basemodel.py  component.py  external_codebase.py
cstar/orchestration/: __init__.py  adapter.py  application.py  dag_runner.py  formatting.py  models.py  orchestration.py  orchestrator.py  planning.py  roms_dot_in.py  serialization.py  state.py  tracking.py  transforms.py  utils.py
cstar/pio/: external_codebase.py
cstar/retrieval/: __init__.py  retrieved_data.py  retriever.py  source_data.py
cstar/roms/: __init__.py  base_model.py  basemodel.py  component.py  discretization.py  external_codebase.py  input_dataset.py  namelist.py  read_inp.py  runtime_settings.py  simulation.py  utils.py
cstar/scheduler/: job.py
cstar/scripts/: service.py
cstar/system/: environment.py  manager.py  migration.py  registration.py  scheduler.py  scheduler_job.py
cstar/tasks/: repo.py
cstar/tests/: config.py  conftest.py  pytest.ini  test_case.py  test_fixtures.py  test_roms_marbl_example.py
cstar/tests_old/: cstar_blueprint_roms_tools_example.yaml  test_roms_marbl_example.py  test_roms_tools_integration.py
cstar_ocean/: __init__.py  additional_code.py  additional_files  base_model.py  case.py  component.py  core.py  cstar_additional_code.py  cstar_base_model.py  cstar_case.py  cstar_component.py  cstar_environment.py  cstar_input_dataset.py  cstar_ocean.py  environment.py  input_dataset.py  roms_marbl_example.py  utils.py
cstar_ocean/base/: __init__.py  additional_code.py  basemodel.py  component.py  input_dataset.py  utils.py
cstar_ocean/marbl/: __init__.py  basemodel.py
cstar_ocean/roms/: __init__.py  component.py  input_dataset.py
docs/: 1_building_a_case_and_exporting_it_as_a_blueprint.ipynb  1_building_and_exporting_a_case.ipynb  2_importing_and_running_a_case.ipynb  2_importing_and_running_a_case_from_a_blueprint.ipynb  3_restarting_and_continuing_a_case.ipynb  4_preparing_roms_input_datasets.ipynb  5_handling_jobs_on_hpc_systems.ipynb  5_handling_runs_executed_as_jobs_on_hpc_systems.ipynb  5_tracking_runs_executed_as_jobs_on_hpc_systems.ipynb  Makefile  _machines.md  api-blueprint.rst  api-orchestration.rst  api.rst  applications.rst  blueprints.rst  conf.py  configuration.rst  contributing.md  contributing.rst  cstar_example_notebook.ipynb  custom_applications.rst  disclaimer.md  environment.yml  index.rst  installation.md  installation.rst  introduction.md  machines.md  machines.rst  make.bat  python_api_guides.rst  releases.rst  roms_tools_input.ipynb  terminology.md  terminology.rst  tutorial_bp.ipynb  workplans.rst
docs/_templates/: environment_module.rst
docs/howto_guides/: 1_working_with_additionalcode.ipynb  2_working_with_inputdatasets.ipynb  3_working_with_externalcodebases.ipynb  4_running_on_personal_computers.ipynb  5_handling_jobs_on_hpc_systems.ipynb  5_running_on_hpcs.ipynb
docs/python_api_guides/: 2_importing_and_running_a_simulation_from_a_blueprint.ipynb  3_restarting_and_continuing_a_simulation.ipynb  5_working_with_inputdatasets.ipynb  8_handling_jobs_on_hpc_systems.ipynb
docs/releases/: unreleased.rst  v0.0.1-alpha.rst  v0.0.3-alpha.rst  v0.0.8-alpha.rst  v0.1.0.rst  v0.2.0.rst  v0.2.x.rst  v0.3.0.rst  v0.4.0.rst  v0.5.0.rst  v0.6.0.rst
docs/schemas/: index.rst
docs/snippets/: in-development.rst  review-config.rst
docs/tutorials/: 1_building_a_simulation_and_exporting_it_as_a_blueprint.ipynb  2_importing_and_running_a_simulation_from_a_blueprint.ipynb  3_restarting_and_continuing_a_simulation.ipynb  blueprint_pio.yaml  nest_ic_bp.yaml  tutorial_bp.ipynb  tutorial_wp.ipynb  tutorial_wrkpln.ipynb  wales_toy_blueprint.yaml  wales_toy_plotter_blueprint.yaml  wio_toy_blueprint.yaml  workplan_laptop_example.yaml  workplan_laptop_example_w_plotter.yaml  workplan_nesting_laptop_example.yaml  (+2 more)
examples/: cstar_alpha_exercise_c.ipynb  cstar_blueprint_roms_marbl_example.yaml  cstar_example.py  cstar_example_notebook.ipynb  roms_marbl_example.py
setup_cstar/: Externals.cfg  cstar_get_config  setup_cstar  unsetup.sh
tests/: cstar_blueprint_roms_tools_example.yaml  roms-tools-test-data-for-cstar.ipynb  test_roms_marbl_example.py
(+294 files in other folders)
