[project]
name = "cstar-ocean"
description = "Computational systems for tracking ocean carbon"
readme = "README.md"
urls = { repository = "https://github.com/CWorthy-ocean/C-Star", homepage = "https://www.cworthy.org" }
authors = [
    { name = "Dafydd Stephenson", email = "dafydd@cworthy.org" },
    { name = "Thomas Nicholas", email = "tom@cworthy.org" },
    { name = "Nora Loose", email = "nora@cworthy.org" },
    { name = "Matt Long", email = "matt@cworthy.org" },
    { name = "Scott Eilerman", email = "scott.eilerman@cworthy.org" },
    { name = "Chris McBride", email = "chris@cworthy.org" },
]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Oceanography"
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "python-dateutil>=2.8.2",
    "python-dotenv",
    "PyYAML==6.0.2",
    "pydantic>=2.11",
    "pytimeparse>=1.1.8",
    "pooch>=1.8.1",
    "prefect>=3.6.1",
    "roms_tools[dask]==3.1.2",
]
keywords = ["MCDR", "CDR", "ocean carbon", "climate"]

[project.optional-dependencies]
test = [
     "pytest>=7.0",
     "roms_tools[dask]==3.1.2"
     ]
dev =["ruff"]

[project.scripts]
cstar = "cstar.cli.cli:main"

[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "setuptools_scm[toml]>=7.0",
    "check-manifest"
]

[tool.setuptools_scm]
fallback_version = "9999"

# Configuration for mypy type checker
[tool.mypy]
ignore_missing_imports = true
exclude = "properties|asv_bench|docs"

# Configuration for ruff linter and formatter
[tool.ruff]
fix = true
show-fixes = true
line-length = 88

[tool.ruff.lint]
extend-select = ["I", "F", "E", "W", "D", "UP"] #  "RUF", "UP"]
ignore = [
    # will fix eventually
    "E501",
    "D205",
    "D102",
    "D101",
    "D400",
    "D103",
    "D106",
    # maybe fix
    "D100",
    "D401",
    "D104", # will this show up in the readthedocs?
    # won't fix
    "D105",
    "D107", # if you're doing wacky init stuff, please document

]#, "D205", "D102", "D100", "D401", "D101", "D105", "D103", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"


[tool.pre-commit]
config = ".pre-commit-config.yaml"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "examples*", "additional_files*", "externals*"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
norecursedirs = [".tox", ".git", "__pycache__", ".#*", "*~"]
log_cli_format = "%(asctime)s | %(levelname)s | %(name)s::%(funcName)s:%(lineno)d: %(message)s"
log_cli_level = "INFO"
asyncio_mode = "auto"


# Use addopts to ignore specific files and directories
addopts = [
    "--ignore-glob=cstar/cstar_local_config.py",
    "--ignore-glob=cstar/externals/**",
    "--ignore-glob=examples/**.py",
    "--ignore-glob=*~",
    "--ignore-glob=.#*"
]
